<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="uz.mnsh.sayyidsafo.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/carModeFragment"
        android:name="uz.mnsh.sayyidsafo.ui.fragment.DashboardFragment"
        android:label="@string/title_car_mode"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/listenFragment"
        android:name="uz.mnsh.sayyidsafo.ui.fragment.NotificationsFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/chosenFragment"
        android:name="uz.mnsh.sayyidsafo.ui.fragment.NotificationsFragment"
        android:label="@string/title_chosen"
        tools:layout="@layout/fragment_notifications" />

</navigation>