<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragment.ChosenFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChosen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvChosen"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChosen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/text_view_border"
        android:text="@string/title_chosen"
        android:paddingVertical="7dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSearch"
        app:layout_constraintEnd_toStartOf="@id/tvSaved"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSaved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:background="@drawable/text_view_bg"
        android:text="@string/title_saved"
        android:paddingVertical="7dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSearch"
        app:layout_constraintStart_toEndOf="@id/tvChosen"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editSearch"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:hint="@string/text_search"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/alegriya_medium"
        android:inputType="text"
        android:background="@drawable/circle_edit_text"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:paddingHorizontal="20dp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>