<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notif"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_hello"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_menu" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hello">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_day_notif"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_lessons"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>